<resources>
    <string name="app_name">Bitazza</string>

    <!--Bottom Navigation Menu-->
    <string name="title_login">Login</string>
    <string name="title_market">Market</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_news">News</string>
    <string name="title_activity">Activity</string>
    <string name="title_settings">Settings</string>


    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
</resources>