<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_market"
        android:icon="@drawable/ic_baseline_store_mall_directory_24"
        android:title="@string/title_market" />

    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/ic_baseline_account_balance_wallet_24"
        android:title="@string/title_wallet" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_baseline_live_tv_24"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_activity"
        android:icon="@drawable/ic_baseline_show_chart_24"
        android:title="@string/title_activity" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />
</menu>